<resources>
    <string name="app_name">NUMAD18S-Michelle Lee</string>
    <string name="long_app_name">Michelle Lee</string>
    <string name="action_settings">Settings</string>

    // About me button
    <string name="about_label">About</string>
    <string name="ok_label">OK</string>
    <string name="about_title">About Me</string>
    <string name="about_text">\
        Name: Michelle Lee\n\
        Email: michedlee@gmail.com\n\
        Year: 1st\n\
    </string>

    // Generate error button
    <string name="generate_label">Generate Error</string>
    <string name="generate_title">Generate Error</string>
    <string name="generate_text">\
    </string>

    // Main menu buttons
    <string name="custom_desc">Headshot Image</string>
    <string name="new_game_btton">New Game</string>
    <string name="dictionary_title">Dictionary</string>
    <string name="continue_button_title">Continue</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="scoreboard_title">Scoreboard</string>

    // Acknowledgements
    <string name="ack_title">Acknowledgements</string>
    <string name="ack_list">\
        Sounds:\n\
        - Music: https://freesound.org/people/ChairPepper/sounds/329754/\
        - Click: https://freesound.org/people/RADIY/sounds/213148/\
        - Correct: https://freesound.org/people/radian/sounds/62977/\
        - Incorrect: https://freesound.org/people/DrMaysta/sounds/418509/\n\
        Source Code:\n\
        - Some ideas from stackoverflow\
        - Timer: https://bit.ly/2I9Q8h5">\
        - Board: Hello, Android Introduction Google's Mobile Development Platform by Ed Burnette
    </string>

    // Game Menu
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="music_on">Music On</string>
    <string name="music_off">Music Off</string>

    // Winner
    <string name="declare_winner">%1$s is the winner</string>

    // Submissions button
    <string name="B1">1</string>
    <string name="B2">2</string>
    <string name="B3">3</string>
    <string name="B4">4</string>
    <string name="B5">5</string>
    <string name="B6">6</string>
    <string name="B7">7</string>
    <string name="B8">8</string>
    <string name="B9">9</string>
    <string name="B10">SUBMIT</string>
    <string name="init_score">0</string>
    <string name="score_header">Score:\u0020</string>

    // Timer
    <string name="timer_title">Timer:\u0020</string>
    <string name="timerVal">0:00</string>
    <string name="pause">Pause</string>
    <string name="go">Go</string>
    <string name="end">Game Over</string>
    <string name="paused">Pause</string>
    <string name="resume">Resume</string>
    <string name="start">Phase One Instructions</string>
    <string name="instructions">\n\Instructions:\n\
        - The Scroggle board is made up of 9 mini boards.\
        - Within each mini board, create words of 3+ letters.\
        - Letters must be selected in spelling order.\
        - Click the corresponding B button to submit the word.\
        - Unselect the letters in the order they were selected.\
        - Points are awarded by letter similar to Scrabble.\
        - 9-letter words formed in phase 1 are worth double points.\
        - Each invalid word that is submitted has a penalty of -3 points (0 is the min score).\
        - The game is 3 minutes long. The first 1.5 minutes is phase 1. The second half of the time is phase 2.\
        - Once time runs out, the game is over.\n\
    </string>
    <string name="enter">Enter</string>
    <string name="enter_name">Enter username:</string>

    // Scroggle acknowledgments
    <string name="scroggle_ack_button">Acknowledgments</string>
    <string name="scroggle_ack_list">\
        Sounds:\n\
        - Music: https://freesound.org/people/ChairPepper/sounds/329754/\
        - Click: https://freesound.org/people/RADIY/sounds/213148/\
        - Correct: https://freesound.org/people/radian/sounds/62977/\
        - Incorrect: https://freesound.org/people/DrMaysta/sounds/418509/\n\
        Source Code:\n\
        - Some ideas from stackoverflow\
        - Timer: https://bit.ly/2I9Q8h5">\
        - Board: Hello, Android Introduction Google's Mobile Development Platform by Ed Burnette
    </string>

    // Game over
    <string name="final_score">\n\Your final score is\u0020</string>
    <string name="time_left">The time left on the clock is\u0020</string>

    // Phase two
    <string name="phase_two_title">Phase Two Instructions</string>
    <string name="phase_two_instructions">\n\Instructions:\n\
        - Phase One is over, you are now entering Phase Two.\
        - You will have 10 seconds to select one letter from each mini board.\
        - Choose your letters wisely as points are now doubled for all letters and a 9 letter word is worth triple!\
        - Likewise, an invalid word will be penalized.\
        - You have 1.5min to create a new word from these letters.\
        - Hit the Submit button to submit your word.\
    </string>

    // Firebase stuff
    <string name="demo_app_name">FirebaseDemo</string>
    <string name="quickstart_message">The InstanceID button logs the token to the log. The Send Notification Button sends the notification to the client device.</string>
    <string name="send_notification">Send Notification</string>
    <string name="log_token">Show Token</string>


    <string name="msg_subscribed">Subscribed to high score</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="go_to_fcm_demo">Cloud Messaging Example</string>
    <string name="go_to_realtime_database_demo">Realtime Database Example</string>

    <string name="username">User Name</string>
    <string name="score">Score</string>

    <string name="add5">Add 5</string>
    <string name="send_notification_text">Send Android Notification</string>
    <string name="subscribe_to_news">Subscribe to \"News\"</string>
    <string name="send_message_to_news">Send Message to News Topic</string>
    <string name="start_notification_act">Notification Example</string>

    <string name="start_permissions_act">Permissions Example</string>

    // Leaderboard
    <string name="longest_word">LONGEST WORD</string>
    <string name="rank_title">RANK</string>
    <string name="name_title">USER NAME</string>
    <string name="date_title">DATE</string>
    <string name="wordscore_title">POINTS</string>
    <string name="endscore_title">SCORE</string>
    <string name="update_leaderboard">Update</string>
    <string name="sort_score">Sort by end score</string>
    <string name="sort_wordscore">Sort by word score</string>

    // Notificaitons
    <string name="channel_name">Word Messaging</string>
    <string name="channel_description">Word Messaging</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>

    // High score dialog
    <string name="highscore_title">New High Score</string>
    <string name="highscore_text">\Another player has achieved a new high score!</string>

</resources>
